--- a/Module 1/Practice1/index.html
+++ b/Module 1/Practice1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 1</title>
+    <title>Practice 1</title>
 </head>
 
 <body>
