--- a/Module 3/Homework3/index.html
+++ b/Module 3/Homework3/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 2</title>
+    <title>Homework 3</title>
 </head>
 <body>
     
 
 
     <!-- <script src="./js/task1.js" type="module"></script> -->
-    <!-- <script src="./js/task2.js" type="module"></script> -->
-    <!-- <script src="./js/task3.js" type="module"></script> -->
-    <!-- <script src="./js/task4.js" type="module"></script> -->
-    <!-- <script src="./js/task5.js" type="module"></script> -->
 </body>
 </html>
