--- a/Module 3/Practice1/index.html
+++ b/Module 3/Practice1/index.html
@@ -10,7 +10,7 @@
     
 
 
-    <!-- <script src="./js/task1.js" type="module"></script> -->
+    <script src="./js/task1.js" type="module"></script>
     <!-- <script src="./js/task2.js" type="module"></script> -->
     <!-- <script src="./js/task3.js" type="module"></script> -->
     <!-- <script src="./js/task4.js" type="module"></script> -->
