--- a/Module 2/Homework2/index.html
+++ b/Module 2/Homework2/index.html
@@ -10,6 +10,12 @@
     
 
 
-    <script src="./js/task1.js" type="module"></script>
+    <!-- <script src="./js/task1.js" type="module"></script> -->
+    <!-- <script src="./js/task2.js" type="module"></script> -->
+    <!-- <script src="./js/task3.js" type="module"></script> -->
+    <!-- <script src="./js/task4.js" type="module"></script> -->
+    <!-- <script src="./js/task5.js" type="module"></script> -->
+    <!-- <script src="./js/task6.js" type="module"></script> -->
+    <script src="./js/task7.js" type="module"></script>
 </body>
 </html>
